# decaf-compiler

./: .gitignore  CHANGELOG.md  decaf-compiler.cabal  hie.yaml
exe/: Main.hs
src/: Lexer.hs  Main.hs  Parser.hs
test/: LexerTest.hs
