cabal-version:      2.4
name:               decaf-compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

author:             Jason Chen and Wayne Zhao
maintainer:         chezbgone@gmail.com
license:            MIT
license-file:       LICENSE

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:    Main Lexer Parser
  build-depends:      base >=4.14 && <5
                    , extra
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  default-extensions: EmptyCase PostfixOperators TupleSections ImportQualifiedPost NamedFieldPuns BangPatterns
                      BinaryLiterals HexFloatLiterals NumericUnderscores
                      GADTSyntax RankNTypes TypeApplications PolyKinds StandaloneKindSignatures ExistentialQuantification TypeOperators ConstraintKinds
                      ExplicitForAll KindSignatures NamedWildCards ScopedTypeVariables
                      FlexibleContexts FlexibleInstances MultiParamTypeClasses ConstrainedClassMethods InstanceSigs TypeSynonymInstances
                      DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveTraversable StandaloneDeriving EmptyDataDeriving DeriveLift GeneralisedNewtypeDeriving DeriveGeneric

executable decaf-compiler
  main-is:            Main.hs
  build-depends:      base >=4.14 && <5
  hs-source-dirs:     exe
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  default-extensions: EmptyCase PostfixOperators TupleSections ImportQualifiedPost NamedFieldPuns BangPatterns
                      BinaryLiterals HexFloatLiterals NumericUnderscores
                      GADTSyntax RankNTypes TypeApplications PolyKinds StandaloneKindSignatures ExistentialQuantification TypeOperators ConstraintKinds
                      ExplicitForAll KindSignatures NamedWildCards ScopedTypeVariables
                      FlexibleContexts FlexibleInstances MultiParamTypeClasses ConstrainedClassMethods InstanceSigs TypeSynonymInstances
                      DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveTraversable StandaloneDeriving EmptyDataDeriving DeriveLift GeneralisedNewtypeDeriving DeriveGeneric

test-suite lexer
  type:               exitcode-stdio-1.0
  main-is:            LexerTest.hs
  hs-source-dirs:     test
  build-depends:      base >=4.14 && <5
                  ,   decaf-compiler
                  ,   directory
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  default-extensions: EmptyCase PostfixOperators TupleSections ImportQualifiedPost NamedFieldPuns BangPatterns
                      BinaryLiterals HexFloatLiterals NumericUnderscores
                      GADTSyntax RankNTypes TypeApplications PolyKinds StandaloneKindSignatures ExistentialQuantification TypeOperators ConstraintKinds
                      ExplicitForAll KindSignatures NamedWildCards ScopedTypeVariables
                      FlexibleContexts FlexibleInstances MultiParamTypeClasses ConstrainedClassMethods InstanceSigs TypeSynonymInstances
                      DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveTraversable StandaloneDeriving EmptyDataDeriving DeriveLift GeneralisedNewtypeDeriving DeriveGeneric
